kubernetes-basic-yaml/prod/app-one/app-one-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-prod-service
  namespace: prod
spec:
  selector:
    app: app-one-prod-web-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
