kubernetes-basic-yaml/prod/app-one/app-one-prod-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-prod-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: app-one.okkarmin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-one-prod-service
                port:
                  number: 9090
